app/static/styles.css
/* ... */
.story_counter {
    margin-top: 30px;
    font-family: "Open Sans Regular";
}

#num_stories {
    font-size: 50px;
    font-family: "Open Sans Regular";
    color: rgb(210, 159, 19);
    line-height: 0.6;
    text-align: center;
    -moz-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -webkit-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -ms-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
}

#stories_description {
    font-size: 50px;
    font-family: "Open Sans Regular";
    font-weight: lighter;
    color: rgb(52, 41, 79);
    line-height: 0.6;
    text-align: center;
    -moz-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -webkit-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
    -ms-transform: matrix(0.99959204631372, 0, 0, 1.0018460443303, 0, 0);
}

.story_image_icon {
    border-radius: 50%;
    opacity: 0.8;
    width: 65%;
    height: 65%;
    /*was 150 px before*/
}

#hashtag {
    font-size: 36px;
    font-family: "Open Sans Regular";
    color: rgb(192, 192, 192);
    line-height: 0.889;
    text-align: center;
}

.large_card {
    border-width: 1.5px;
    border-color: rgb(217, 217, 217);
    border-style: solid;
    padding: 5%;
}

.large_card_image {
    text-align: center;
    opacity: 0.8;
    border-radius: 50%;
    width: 25%;
    height: 25%;
}

.large_card_video {
    width: 560px;
    height: 315px;
}

.card {
    border-width: 1.5px;
    border-color: rgb(217, 217, 217);
    border-style: solid;
    padding: 10px;
}

/*.card-image {*/
    /*text-align: center;*/
    /*background-repeat: no-repeat;*/
    /*background-position: 50%;*/
    /*border-radius: 50%;*/
    /*width: 150px;*/
    /*height: 150px;*/
/*}*/

#card-size{
    height: 31rem;
}

#card-header {
    text-align: center;
    font-weight: bold;
    color: #59315f;
}

#card-summary {
    text-align: center;
    color: #59315f;
}

#card-image {
    text-align: center;
}

#card-video {
    text-align: center;
}

.view_all_stories {
    font-size: 15.385px;
    font-family: "Open Sans Regular";
    color: rgb(89, 49, 95);
    line-height: 1.2;
    text-align: center;
    -moz-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -webkit-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    -ms-transform: matrix(1.30032139215009, 0, 0, 1.30264863171749, 0, 0);
    border-width: 1.5px;
    border-color: rgb(89, 49, 95);
    border-style: solid;
    background: transparent;
    padding: 15px 30px 15px 30px;
    text-decoration: none;
    margin-bottom: 40px;
}

.give {
    background-color: rgb(242, 242, 242);
    box-shadow: inset 1.5px 2.598px 3px 0px rgba(0, 0, 0, 0.02);
    font-size: 50px;
    font-family: "Open Sans Regular";
    font-weight: lighter;
    color: rgb(52, 41, 79);
    line-height: 1.3;
    text-align: center;
    -moz-transform: matrix(1.00002951913332, 0, 0, 1.00277982188039, 0, 0);
    -webkit-transform: matrix(1.00002951913332, 0, 0, 1.00277982188039, 0, 0);
    -ms-transform: matrix(1.00002951913332, 0, 0, 1.00277982188039, 0, 0);
    padding-top: 50px;
    padding-bottom: 50px;
}

.give_button {
    font-size: 44px;
    font-family: "Open Sans Regular";
    color: rgb(255, 255, 255);
    line-height: 0.682;
    text-align: center;
    -moz-transform: matrix(0.68219722969798, 0, 0, 0.68189027887868, 0, 0);
    -webkit-transform: matrix(0.68219722969798, 0, 0, 0.68189027887868, 0, 0);
    -ms-transform: matrix(0.68219722969798, 0, 0, 0.68189027887868, 0, 0);
    border-width: 1.5px;
    border-color: rgb(89, 49, 95);
    border-style: solid;
    margin-top: 40px;
    padding-right: 12%;
    padding-left: 12%;
    padding-top: 2%;
    padding-bottom: 2%;
}

.featured_story_image {
    border-radius: 50%;
}

.featured_story_quote {
    font-size: 42px;
    font-family: "Open Sans Regular";
    color: rgba(255, 255, 255, 0.749);
    font-style: italic;
    line-height: 1.286;
    text-align: left;

}

.featured_story_name {
    font-size: 35px;
    font-family: "Open Sans Regular";
    color: rgb(255, 255, 255);
    line-height: 0.686;
    text-align: center;
    -moz-transform: matrix(1.00037757314301, 0, 0, 1, 0, 0);
    -webkit-transform: matrix(1.00037757314301, 0, 0, 1, 0, 0);
    -ms-transform: matrix(1.00037757314301, 0, 0, 1, 0, 0);
}

.featured_story {
    background-color: rgb(89, 49, 95);
}

.initiative {
    margin-top: 40px;
    margin-bottom: 40px;
    font-size: 26px;
    font-family: "Open Sans Regular";
    color: rgb(52, 41, 79);
    line-height: 0.923;
    text-align: center;
}

.initiative a {
    font-weight: bold;
    color: rgb(52, 41, 79);
}

.copyright {
    padding-top: 50px;
    padding-bottom: 25px;
    background-color: rgb(242, 242, 242);
    font-size: 13px;
    font-family: "Open Sans Regular";
    color: rgb(52, 41, 79);
    line-height: 1.846;
    text-align: center;
}

.copyright_mini{
    padding-top: 5px;
    padding-bottom: 1px;
    background-color: rgb(242, 242, 242);
    font-size: 10px;
    font-family: "Open Sans Regular";
    color: rgb(52, 41, 79);
    line-height: 1;
    text-align: center;
}

.copyright a {
    font-weight: bold;
    color: rgb(52, 41, 79);
}

.activist_information {
    background-color: rgb(103, 60, 116);
    padding-bottom: 5%;
}

.share_title {
    padding-top: 5%;
    font-size: 50px;
    font-family: "Open Sans Regular";
    font-weight: lighter;
    color: rgb(255, 255, 255);
    line-height: 0.599;
    text-align: center;
    -moz-transform: matrix(1.0000090694953, 0, 0, 0.99766268359034, 0, 0);
    -webkit-transform: matrix(1.0000090694953, 0, 0, 0.99766268359034, 0, 0);
    -ms-transform: matrix(1.0000090694953, 0, 0, 0.99766268359034, 0, 0);
}

.share_title h5 {
    padding-top: 2%;
    font-size: 22px;
    font-family: "Open Sans Regular";
    font-weight: lighter;
    color: rgb(255, 255, 255);
    line-height: 1.455;
    text-align: center;
    padding-bottom: 2%;
}
/* ... */

